# holistic

./: .gitignore  CLAUDE.md  README.md  holistic
dashboard/: README.md
frontend/: eslint.services.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
frontend/app/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/app/src/: App.tsx  i18n.ts  main.tsx  registry.ts
services/: manifest
services/dashboard/: install.sh  pyproject.toml
services/dashboard/backend/holistic_api/: config.py  instance.py  main.py
services/dashboard/backend/holistic_api/accounts/: invites.py  models.py  profiles.py  provision.py  users.py
services/dashboard/backend/holistic_api/auth/: cookies.py  deps.py  pam.py  sessions.py  tokens.py
services/dashboard/backend/holistic_api/routers/: account.py  admin.py  auth.py  instance.py
services/dashboard/backend/holistic_api/services/samba/: fsclient.py  paths.py  router.py
services/dashboard/caddy/: Caddyfile
services/dashboard/lib/: holistic-invites.py  holistic-perms.py  holistic-user.sh
services/dashboard/pam.d/: holistic-dashboard
services/dashboard/permissions/: samba.json
services/dashboard/sbin/: holistic-fs  holistic-invite-consume  holistic-pam-check  holistic-user-add  holistic-user-delete  holistic-user-exists  holistic-user-passwd
services/dashboard/sudoers.d/: holistic
services/dashboard/systemd/: holistic-dashboard.service
services/samba/: README.md  install.sh  setup.md
services/samba/ui/: ConnectPanel.tsx  FileManager.tsx  i18n.ts  index.tsx  (+2 more)
(+5 files in other folders)
