[project]
name = "holistic-api"
version = "0.1.0"
description = "Holistic dashboard backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-pam>=2.0.2",
    "pyjwt>=2.9",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["holistic_api"]
package-dir = { "" = "backend" }
