[project]
name = "holistic-api"
version = "0.1.0"
description = "Holistic dashboard backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyjwt>=2.9",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "backend" }

# Discover holistic_api AND its subpackages (routers, services, services.samba, auth,
# accounts). A manual `packages = ["holistic_api"]` ships only the top-level modules, so
# `from .routers import ...` then crashes at import and the service crash-loops.
[tool.setuptools.packages.find]
where = ["backend"]
